--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -70,3 +70,29 @@
   align-items: center; /* Align items vertically in the center */
   justify-content: center; /* Align items horizontally to the start */
 }
+
+.flex-img-container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+  max-width: 100%;
+  justify-content: center;
+  gap: 15px;
+  margin: 7.5px;
+}
+
+.solo-round-img {
+  border-radius: 25px; /* Rounded corners */
+  display: block; /* Center using margin if needed */
+  margin: 7.5px auto; /* Space above/below and center horizontally */
+  box-sizing: border-box; /* Ensures padding is included in width/height */
+  border: 4px solid #E8E8E8; /* Optional border */
+}
+
+.flex-round-img {
+  border-radius: 25px; /* Rounded corners */
+  display: block; /* Center using margin if needed */
+  box-sizing: border-box; /* Ensures padding is included in width/height */
+  border: 4px solid #E8E8E8; /* Optional border */
+}
